[iOS Reading List] Skip invalid iages in distillation.

If an image is invalid (e.g. src pointing to not existing URL), the
current behavior is to fail the whole distillation.
Just skip the image instead (as normal rendering would do).
Replace src by empty string to avoid network acces when displaying
offline page.

BUG=690829

Review-Url: https://codereview.chromium.org/2683393002
Cr-Commit-Position: refs/heads/master@{#449577}

Former-commit-id: 182bfc3b6cd2c7536577752dfbf032e42207b34f