ios/chrome/browser/reading_list/url_downloader.cc
@@ -333,8 +333,9 @@ std::string URLDownloader::SaveAndReplaceImagesInHTML(
     // Mixed content is HTTP images on HTTPS pages.
     bool image_is_mixed_content = distilled_url_.SchemeIsCryptographic() &&
                                   !images[i].url.SchemeIsCryptographic();
-    // Only save images if it is not mixed content.
-    if (!image_is_mixed_content) {
+    // Only save images if it is not mixed content and image data is valid.
+    if (!image_is_mixed_content && images[i].url.is_valid() &&
+        !images[i].data.empty()) {
       if (!SaveImage(url, images[i].url, images[i].data, &local_image_name)) {
         return std::string();
       }
